--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "npx tsc-watch --onSuccess \"node dist/src/main.js\"",
+    "dev": "npx tsc-watch --onSuccess \"node --inspect dist/src/main.js\"",
     "start": "node dist/main.js"
   },
   "devDependencies": {
