--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
-    "googleapis": "^105.0.0",
+    "@supabase/supabase-js": "^2.45.1",
     "node-telegram-bot-api": "^0.66.0",
     "puppeteer": "^22.13.1"
   },
