--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "npx tsc-watch --onSuccess \"node dist/src/main.js\"",
-    "start": "node dist/main.js"
+    "start": "node --es-module-specifier-resolution=node ./dist/src/main.js"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.7"
